Added some exercises to do.

--- a/notebooks/Modeling.ipynb
+++ b/notebooks/Modeling.ipynb
@@ -93,7 +93,27 @@
    "source": [
     "The actual work of making the model was just 2 lines of code: one to make an instance of the Modeler class, and another to actually make the model. \n",
     "\n",
-    "That said, there are lots of ways to customize the model that gets created. You can see all the parameters [here](http://telfit.readthedocs.org/en/latest/MakeModel.html), but the default is usually pretty good for a generic model. Parameters you might want to change are shown below:\n",
+    "## Exercise:\n",
+    "\n",
+    "Make and plot a telluric model that zooms in near 2100 nm:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "There are lots of ways to customize the model that gets created. You can see all the parameters [here](http://telfit.readthedocs.org/en/latest/MakeModel.html), but the default is usually pretty good for a generic model. Parameters you might want to change are shown below:\n",
     "\n",
     "### Relative Humidity"
    ]
@@ -392,10 +412,28 @@
     "- **resolution**: Convolve the model with a gaussian of appropriate width to generate a model with the given resolution ($R \\equiv \\lambda / \\Delta \\lambda$)\n",
     "- **vac2air**: If True (the default), it converts the wavelengths into air wavelengths. Otherwise, it leaves them in vacuum wavelengths.\n",
     "\n",
+    "## Exercise:\n",
+    "\n",
+    "Experiment with changing the observatory parameters (`lat` and `alt`)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "## Editing the atmosphere profile.\n",
     "\n",
-    "The atmosphere profile sets the abundance of various molecules, as well as the temperature and pressure, as a function of altitude in the atmosphere. The default profile is a pretty generic nighttime mid-latitude profile from [here](http://www-atm.physics.ox.ac.uk/RFM/atm/). Here are the default atmosphere profiles:\n",
-    "    "
+    "The atmosphere profile sets the abundance of various molecules, as well as the temperature and pressure, as a function of altitude in the atmosphere. The default profile is a pretty generic nighttime mid-latitude profile from [here](http://www-atm.physics.ox.ac.uk/RFM/atm/). Here are the default atmosphere profiles:"
    ]
   },
   {
@@ -609,6 +647,17 @@
     "axes[1].set_ylabel('Transmission Difference')\n",
     "\n",
     "leg = axes[0].legend(loc='best')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Exercise:\n",
+    "\n",
+    "Most of the difference we see here is just because there is more water in the air column with the new atmosphere profile. Try lowering the humidity parameter to get a better feel for the difference that the atmosphere makes to the line profiles."
    ]
   },
   {
