Added a short exercise.

--- a/notebooks/Fitting.ipynb
+++ b/notebooks/Fitting.ipynb
@@ -257,6 +257,24 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise:\n",
+    "\n",
+    "What happens if you get the temperature wrong? Change the temperature a bit and re-run the fit. What happens to the quality of the fit. What happens to the best-fit humidity?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -850,7 +868,11 @@
     "top.plot(subset.x, subset.y/subset.cont, 'r-', alpha=0.5, label='Stellar Model')\n",
     "bottom.plot(newdata2.x, newdata2.y/newdata2.cont / model2.y - subset.y/subset.cont, 'k-')\n",
     "\n",
-    "leg = top.legend(loc='best', fancybox=True)"
+    "leg = top.legend(loc='best', fancybox=True)\n",
+    "\n",
+    "bottom.set_xlabel('Wavelength (nm)')\n",
+    "bottom.set_ylabel('Residuals')\n",
+    "top.set_ylabel('Normalized Flux')"
    ]
   },
   {
@@ -950,7 +972,7 @@
     "    star.y = subset.y / subset.cont\n",
     "    return star\n",
     "\n",
-    "# Method 2: Ignore the strong stellar lines\n",
+    "# Reset the fitter to use all of the wavelength space\n",
     "fitter.ignore = []\n",
     "\n",
     "# Fit\n",
