Added some exercises to do.

--- a/notebooks/Advanced.ipynb
+++ b/notebooks/Advanced.ipynb
@@ -433,6 +433,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Exercise:\n",
+    "\n",
+    "Try the Beer's law method for a different echelle order. Take care to figure out what molecule is responsible for the telluric absorption (water is usually a good guess, but not always)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise:\n",
+    "\n",
+    "Try the Beer's law method for the late-type star spectrum. Can you hack it to ignore certain regions or use the model spectrum? I'll get you started by reading in the relevant data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Read in the data from a text file\n",
+    "wave, flux = np.loadtxt('../data/sample_data2.dat', usecols=(0, 1), unpack=True)\n",
+    "data = telfit.DataStructures.xypoint(x=wave, y=flux)\n",
+    "\n",
+    "# Read in the model\n",
+    "x, y, cont = np.loadtxt('../data/t4500g5.0z0.0a0.0.dat', usecols=(0, 1, 2), unpack=True)\n",
+    "model = telfit.DataStructures.xypoint(x=x, y=y, cont=cont)\n",
+    "\n",
+    "# badregions:\n",
+    "badregions = [[1512, 1514.7],\n",
+    "              [1515.5, 1516.7],\n",
+    "              [1520.2, 1521],\n",
+    "              [1521.25, 1522.1],\n",
+    "              [1524, 1524.5],\n",
+    "              [1528.8, 1529.7]]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
