Enclose seaborn import in try/except since it is optional.

--- a/notebooks/Fitting.ipynb
+++ b/notebooks/Fitting.ipynb
@@ -33,8 +33,12 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "sns.set_context('notebook', font_scale=1.5)\n",
-    "sns.set_style('whitegrid')\n",
+    "try:\n",
+    "    import seaborn as sns\n",
+    "    sns.set_context('notebook', font_scale=1.5)\n",
+    "    sns.set_style('whitegrid')\n",
+    "except ImportError:\n",
+    "    pass\n",
     "\n",
     "%matplotlib inline\n"
    ]
