--- a/notebooks/Modeling.ipynb
+++ b/notebooks/Modeling.ipynb
@@ -31,9 +31,10 @@
     "from astropy import units as u\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "\n",
     "try:\n",
     "    import seaborn as sns\n",
-    "    sns.set_context('talk', font_scale=1.5)\n",
+    "    sns.set_context('notebook', font_scale=1.5)\n",
     "    sns.set_style('whitegrid')\n",
     "except ImportError:\n",
     "    pass\n",
